Commit final changes prior to posting on Canvas.

--- a/Syllabus/general_components/375/soci375_bib_main.bib
+++ b/Syllabus/general_components/375/soci375_bib_main.bib
@@ -66,6 +66,7 @@
 	author = {Bello, Walden},
 	month = sep,
 	year = {2020},
+	keywords = {neoliberalism},
 }
 
 @misc{stiglitz_end_2019,
@@ -127,10 +128,563 @@
 	abstract = {Theories of a “new imperialism” assume that world capitalism in the 21st century is still made up of “domestic capitals” and that distinct national economies and world political dynamics are driven by US efforts to offset the decline in hegemony amidst heightened inter-imperialist rivalry. These theories ignore empirical evidence on the transnationalization of capital and the increasingly salient role of transnational state apparatuses in imposing capitalist domination beyond the logic of the inter-state system. I argue here that US interventionism is not a departure from capitalist globalization but a response to its crisis. The class relations of global capitalism are now so deeply internalized within every nation-state that the classical image of imperialism as a relation of external domination is outdated. The end of the extensive enlargement of capitalism is the end of the imperialist era of world capitalism. The implacable logic of global accumulation is now largely internal to the complex of fractious political institutions through which ruling groups attempt to manage those relations. We need a theory of capitalist expansion – of the political processes and the institutions through which such expansion takes place, the class relations and spatial dynamics it involves.},
 	language = {en},
 	number = {1},
-	urldate = {2022-08-03},
 	journal = {Societies Without Borders},
-	author = {Robinson, William},
+	author = {Robinson, William I.},
 	year = {2007},
 	pages = {5--26},
 	file = {robinson,w_newimperialism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/robinson,w_newimperialism.pdf:application/pdf},
+}
+
+@incollection{jessop_fordism_1992,
+	address = {London, UK},
+	edition = {1},
+	title = {Fordism and {Post}-{Fordism}: {A} {Critical} {Reformulation}},
+	isbn = {978-0-203-99554-9},
+	abstract = {As the language of Fordism and post-Fordism has entered everyday discussion it has alsobeen  vulgarized.1  This  reduces  its  utility  for  theoretical  understanding  and  empirical  analysis   and   generates   many   confusions   and   controversies.   This chapter critically reworks the conventional terminology of Fordism and post-Fordism by distinguishing four levels  on which they can be analyzed. It also notes a fundamental analytical asymmetry  between the two terms and calls for more cautious and critical use of the notion of post-Fordism.},
+	language = {en},
+	booktitle = {Pathways to {Industrialization} and {Regional} {Development}},
+	publisher = {Routledge},
+	author = {Jessop, Bob},
+	year = {1992},
+	pages = {42--62},
+	file = {jessop,b_fordism_postfordism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/jessop,b_fordism_postfordism.pdf:application/pdf},
+}
+
+@article{lipietz_towards_1984,
+	title = {Towards {Global} {Fordism}?},
+	language = {en},
+	number = {132},
+	journal = {New Left Review},
+	author = {Lipietz, Alain},
+	year = {1984},
+	pages = {33--47},
+	file = {lipietz,a_towards_globalfordism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/lipietz,a_towards_globalfordism.pdf:application/pdf},
+}
+
+@incollection{harvey_freedoms_2007,
+	address = {New York},
+	title = {Freedom's {Just} {Another} {Word}},
+	language = {en},
+	booktitle = {Brief {History} of {Neoliberalism}},
+	publisher = {Oxford University Press},
+	author = {Harvey, David},
+	month = jan,
+	year = {2007},
+	pages = {5--38},
+	file = {harvey,d_freedom_anotherword.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/harvey,d_freedom_anotherword.pdf:application/pdf},
+}
+
+@incollection{friedman_relation_1962,
+	address = {Chicago, IL},
+	title = {The {Relation} {Between} {Economic} {Freedom} and {Political} {Freedom}},
+	language = {en},
+	booktitle = {Capitalism and {Freedom}},
+	publisher = {University of Chicago Press},
+	author = {Friedman, Milton},
+	year = {1962},
+	pages = {7--21},
+	file = {friedman,m_economicfreedom.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/friedman,m_economicfreedom.pdf:application/pdf},
+}
+
+@article{bonnefoy_documenting_2017,
+	address = {New York, NY},
+	chapter = {World - Americas},
+	title = {Documenting {U}.{S}. {Role} in {Democracy}’s {Fall} and {Dictator}’s {Rise} in {Chile}},
+	url = {https://nyti.ms/3QfZ5Jl},
+	language = {en},
+	journal = {New York Times},
+	author = {Bonnefoy, Pascale},
+	month = oct,
+	year = {2017},
+	keywords = {chile, neoliberalism, U.S. foreign policy},
+	pages = {3},
+	file = {bonnefoy,p_chile_cia.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/bonnefoy,p_chile_cia.pdf:application/pdf},
+}
+
+@incollection{stern_increasing_2011,
+	title = {Increasing {Returns} in a {Comparative} {Advantage} {World}},
+	volume = {16},
+	isbn = {978-981-4340-36-6 978-981-4340-37-3},
+	url = {https://bit.ly/3Qk0m1U},
+	language = {en},
+	urldate = {2022-08-04},
+	booktitle = {World {Scientific} {Studies} in {International} {Economics}},
+	publisher = {WORLD SCIENTIFIC},
+	author = {Krugman, Paul},
+	collaborator = {Stern, Robert M},
+	month = jul,
+	year = {2011},
+	doi = {10.1142/9789814340373_0007},
+	pages = {43--51},
+	file = {krugman,p_comp-advantage.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/krugman,p_comp-advantage.pdf:application/pdf},
+}
+
+@book{amin_unequal_1978,
+	address = {Sussex, England},
+	title = {Unequal {Development}: {An} {Essay} on the {Social} {Formations} of {Peripheral} {Capitalism}},
+	shorttitle = {Unequal {Development}},
+	url = {https://bit.ly/3PXIQAX},
+	language = {en},
+	publisher = {Harvester Press Limted},
+	author = {Amin, Samir},
+	translator = {Pierce, Brian},
+	year = {1978},
+	file = {amin,s_unequaldevelopment.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/amin,s_unequaldevelopment.pdf:application/pdf},
+}
+
+@incollection{amin_specialization_1976,
+	address = {Sussex, England},
+	title = {From {Specialization} to {Dependence}},
+	booktitle = {Unequal {Development}: {An} {Essay} on the {Social} {Formations} of {Peripheral} {Capitalism}},
+	publisher = {Harvester Press Limted},
+	author = {Amin, Samir},
+	translator = {Pierce, Brian},
+	year = {1976},
+	keywords = {economic development, globalization},
+	pages = {133--145},
+}
+
+@book{pettman_handbook_2012,
+	address = {Singapore},
+	title = {Handbook on international political economy},
+	isbn = {978-981-4366-97-7},
+	language = {en},
+	publisher = {World Scientific},
+	editor = {Pettman, Ralph},
+	year = {2012},
+	note = {OCLC: ocn753623988},
+	keywords = {Economics, International economic relations, International finance, International trade},
+	file = {pettman,r_handbk_ipe.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/pettman,r_handbk_ipe.pdf:application/pdf},
+}
+
+@incollection{baer_global_2012,
+	address = {Singapore},
+	title = {Global {Capitalism} and {Climate} {Change}},
+	booktitle = {Handbook on {International} {Political} {Economy}},
+	publisher = {World Scientific},
+	author = {Baer, Hans A.},
+	year = {2012},
+	pages = {395--414},
+}
+
+@misc{summers_our_1991,
+	title = {Our {Words}: {The} {Lawrence} {Summers} {Memo}},
+	url = {https://bit.ly/3d8BUm9},
+	language = {en},
+	publisher = {The Whirled Bank Group},
+	author = {Summers, Lawrence},
+	year = {1991},
+	file = {lawrence_summers_memo.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/lawrence_summers_memo.pdf:application/pdf},
+}
+
+@article{johnson_potential_2007,
+	title = {Potential {Gains} {From} {Trade} in {Dirty} {Industries}: {Revisiting} {Lawrence} {Summers}’ {Memo}},
+	volume = {27},
+	language = {en},
+	number = {3},
+	journal = {Cato Journal},
+	author = {Johnson, Jay and Pecquet, Gary and Taylor, Leon},
+	year = {2007},
+	pages = {397--410},
+	file = {johnson,j_etal_dirtyindustries.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/johnson,j_etal_dirtyindustries.pdf:application/pdf},
+}
+
+@article{clark_ecological_2009,
+	title = {Ecological {Imperialism} and the {Global} {Metabolic} {Rift}: {Unequal} {Exchange} and the {Guano}/{Nitrates} {Trade}},
+	volume = {50},
+	issn = {0020-7152, 1745-2554},
+	shorttitle = {Ecological {Imperialism} and the {Global} {Metabolic} {Rift}},
+	url = {https://bit.ly/3zzNLkJ},
+	doi = {10.1177/0020715209105144},
+	abstract = {Transfers in economic values are shadowed in complex ways by real material-ecological flows that transform ecological relations between city and country, and between the core and periphery. Directing material flows is a vital part of intercapitalist competition. Ecological imperialism creates asymmetries in the exploitation of the environment, unequal exchange, and a global metabolic rift. The 19th-century guano/nitrates trade illustrates the emergence of a global metabolic rift, as guano and nitrates were transferred from Peru and Chile to enrich the soils of Britain and other imperial countries. This global metabolic rift entailed the decline of soil fertility in Britain, importation of Chinese labor to Peru, mass export of natural fertilizer, degradation of the Peruvian/Chilean environment, war over possession of nitrates, and creation of debt-laden economies. It allowed Britain and other imperial countries to maintain an ‘environmental overdraft’ in their own countries, imperialistically drawing on the natural resources of the periphery. The social metabolic order of capitalism is inseparable from such ecological imperialism, which is as basic to the system as the search for profits itself.},
+	language = {en},
+	number = {3-4},
+	urldate = {2022-08-04},
+	journal = {International Journal of Comparative Sociology},
+	author = {Clark, Brett and Foster, John Bellamy},
+	month = jun,
+	year = {2009},
+	pages = {311--334},
+	file = {clark,b&foster,jb_ecologicalimperialism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/clark,b&foster,jb_ecologicalimperialism.pdf:application/pdf},
+}
+
+@incollection{silver_historical_2015,
+	address = {United Kingdom},
+	title = {Historical {Dynamics} of {Capitalism} and {Labor} {Movements}},
+	booktitle = {The {Oxford} {Handbook} of {Social} {Movements}},
+	publisher = {Oxford University Press},
+	author = {Silver, Beverly J. and Karatasli, Sahan Savas},
+	year = {2015},
+	pages = {133--145},
+	file = {silver,b_historical_dynamics.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/silver,b_historical_dynamics.pdf:application/pdf},
+}
+
+@book{balibar_race_1991,
+	address = {London ; New York},
+	title = {Race, nation, class: ambiguous identities},
+	isbn = {978-0-86091-327-6 978-0-86091-542-3},
+	shorttitle = {Race, nation, class},
+	language = {en},
+	publisher = {Verso},
+	author = {Balibar, Étienne and Wallerstein, Immanuel Maurice},
+	year = {1991},
+	keywords = {Nationalism, Racism, Social classes, Social conflict},
+	file = {balibar,e&wallerstein,i_race_wst.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/balibar,e&wallerstein,i_race_wst.pdf:application/pdf},
+}
+
+@article{sanmiguel-valderrama_feminization_2007,
+	title = {The {Feminization} and {Racialization} of {Labour} in the {Colombian} {Fresh}-cut {Flower} {Industry}},
+	volume = {23},
+	issn = {0169-796X, 1745-2546},
+	url = {https://bit.ly/3StG1cG},
+	doi = {10.1177/0169796X0602300205},
+	abstract = {This article examines the basic features of the working and living conditions of the mostly female labour force of the Colombian ﬂower industry. It argues that in this export industry, critical feminist thought on neo-liberal international trade and the feminization of labour is valid only for workers in the lowest ranks of the industry, the majority of whom are racialized women from low-income, peasant, indigenous, or mixed-race rural backgrounds who face precarious forms of labour. Meanwhile, an elite group of women from urban-middle and upper classes with Western education and European or mixed-race backgrounds work in management, participate in the growers’ associations and oversee the exploitative conditions and health risks that ﬂower production creates for their racialized lower class ‘sisters’. This case emphasizes the importance of considering the intersections of socio-economic status and race, together with gender and other structures, in order to determine who beneﬁts and loses from production for the global market. The article also introduces the concept of ‘racialization of labour’, arguing that the jobs created in the industry are not only feminized but racialized.},
+	language = {en},
+	number = {1-2},
+	urldate = {2022-08-04},
+	journal = {Journal of Developing Societies},
+	author = {Sanmiguel-Valderrama, Olga},
+	month = jan,
+	year = {2007},
+	pages = {71--88},
+	file = {sanmiguel,o_freshcut_colombia.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/sanmiguel,o_freshcut_colombia.pdf:application/pdf},
+}
+
+@article{mies_patriarchy_2007,
+	title = {Patriarchy and accumulation on a world scale revisited. ({Keynote} lecture at the {Green} {Economics} {Institute}, {Reading}, 29 {October} 2005)},
+	volume = {1},
+	issn = {1744-9928, 1744-9936},
+	url = {http://www.inderscience.com/link.php?id=13059},
+	abstract = {Patriarchy and accumulation – revisited’ asks why a book, which first appeared in 1986, still finds so much interest today. The answer is that the analysis of that book is still valid, namely that the unpaid work of women in the household, the work of subsistence producers, working in the informal sector and the work of nature constitute the hidden underground of the capitalist world economy and its accumulation model. In this connection, I use the metaphor of an iceberg economy, where the largest part is hidden under the water. I called this devaluation of work then a process of housewifisation. Today, one speaks of precarisation of work. This work, however, is no longer restricted to women but includes men as well. It is the optimal work for capitalism. And most people in the world do this type of work. The problem is that our concept of labour which still refers only to wage labour, does not at all reflect this reality.},
+	language = {en},
+	number = {3/4},
+	urldate = {2022-08-04},
+	journal = {International Journal of Green Economics},
+	author = {Mies, Maria},
+	year = {2007},
+	pages = {268},
+	file = {miles,m_patriarchy_accumulation.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/miles,m_patriarchy_accumulation.pdf:application/pdf},
+}
+
+@incollection{george_dirty_2000,
+	address = {Berkeley, CA},
+	edition = {1},
+	title = {"{Dirty} {Nurses}” and “{Men} {Who} {Play}”},
+	isbn = {0-520-22216-4},
+	booktitle = {Global {Ethnography}: {Forces}, {Connections}, and {Imaginations} in a {Postmodern} {World}},
+	publisher = {University of California Press},
+	author = {George, Sheba},
+	editor = {Buroway, Michael and Blum, Joseph A. and George, Sheba and Gille, Zsuzsa and Gowan, Teresa and Haney, Lynne and Klawiter, Maren and Lopez, Stephen H. and O'Riain, Sean and Thayer, Millie},
+	year = {2000},
+	pages = {144--174},
+	file = {george,s_dirty_nurses.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/george,s_dirty_nurses.pdf:application/pdf},
+}
+
+@article{bonacich_racialization_2008,
+	title = {The {Racialization} of {Global} {Labor}},
+	volume = {52},
+	abstract = {Drawing on both historical and contemporary examples, the authors argue that today's global capitalist system is maintained and structured within a global system of White supremacy. Groups of workers are located within a hierarchically organized, racialized labor system that differentially exploits workers based upon their racialized and gendered location. Dominant racialized labor groups (mainly White/European workers) are in general afforded more privileges than subordinate racialized labor groups (workers of color), who face the denial of basic citizenship rights and higher degrees of exploitation and inferior working conditions.},
+	language = {en},
+	number = {3},
+	urldate = {2022-08-04},
+	journal = {American Behavioral Scientist},
+	author = {Bonacich, Edna and Alimahomed, Sabrina and Wilson, Jake B.},
+	month = nov,
+	year = {2008},
+	keywords = {class, labor, race},
+	pages = {342--355},
+	file = {bonacich,e-etal_racialization_of_globallabor.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/bonacich,e-etal_racialization_of_globallabor.pdf:application/pdf},
+}
+
+@incollection{wallerstein_ideological_1988,
+	title = {The {Ideological} {Tensions} of {Capitalism}: {Universalism} {Versus} {Racism} and {Sexism}},
+	booktitle = {Race, {Nation}, {Class}: {Ambiguous} {Identities}},
+	publisher = {Verso},
+	author = {Wallerstein, Immanuel},
+	year = {1988},
+	pages = {29--36},
+}
+
+@book{chen_progress_2005,
+	address = {New York, N.Y},
+	title = {Progress of the world's women 2005: women, work, \& poverty},
+	isbn = {978-1-932827-26-2},
+	shorttitle = {Progress of the world's women 2005},
+	language = {en},
+	publisher = {United Nations Development Fund for Women},
+	editor = {Chen, Martha Alter and Vanek, Joann and Lund, Francie and Heintz, James},
+	collaborator = {Jhabvala, Renana and Bonner, Christine},
+	year = {2005},
+	note = {OCLC: ocm62777505},
+	keywords = {Economic conditions, International cooperation, Social conditions, Women, Women in development, Women's rights},
+	file = {chen,m-etal_progress_women_2005.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/chen,m-etal_progress_women_2005.pdf:application/pdf},
+}
+
+@incollection{chen_chapter_2005,
+	address = {New York, N.Y},
+	title = {Chapter 2: {The} {Totality} of {Women}'s {Work}},
+	booktitle = {Progress of the world's women 2005: women, work, \& poverty},
+	publisher = {United Nations Development Fund for Women},
+	author = {Chen, Martha Alter and Vanek, Joann and Lund, Francie and Heintz, James},
+	year = {2005},
+	pages = {22--35},
+}
+
+@article{timmons_roberts_fueling_2007,
+	title = {Fueling {Injustice}: {Globalization}, {Ecologically} {Unequal} {Exchange} and {Climate} {Change}},
+	volume = {4},
+	issn = {1474-7731, 1474-774X},
+	shorttitle = {Fueling {Injustice}},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/14747730701345218},
+	doi = {10.1080/14747730701345218},
+	language = {en},
+	number = {2},
+	urldate = {2022-08-04},
+	journal = {Globalizations},
+	author = {Timmons Roberts, J. and Parks, Bradley C.},
+	month = jun,
+	year = {2007},
+	pages = {193--210},
+	file = {roberts,jt&parks,bc_ecol_unequalexch.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/roberts,jt&parks,bc_ecol_unequalexch.pdf:application/pdf},
+}
+
+@article{givens_ecologically_2019,
+	title = {Ecologically {Unequal} {Exchange}: {A} {Theory} of {Global} {Environmental} {Injustice}},
+	volume = {13},
+	abstract = {In this article we review the theory of ecologically unequal exchange and its relevance for global environmental injustice. According to this theory, global political-economic factors, especially the structure of international trade, shape the unequal distribution of environmental harms and human development; wealthier and more powerful Global North nations have disproportionate access to both natural resources and sink capacity for waste in Global South nations. We discuss how the theory has roots in multiple perspectives on development, world-systems analysis, environmental sociology, and ecological economics. We detail research that tests hypotheses derived from ecological unequal exchange theory on several environmental harms, including deforestation, greenhouse gas emissions, biodiversity loss, and water pollution as well as related human well-being outcomes. We also discuss research on social forces that counter the harmful impacts of ecologically unequal exchange, including institutions, organizations, and environmental justice movements. We suggest that ecologically unequal exchange theory provides an important global political-economic approach for research in environmental sociology and other environmental social sciences as well as for sustainability studies more broadly.},
+	language = {en},
+	number = {5},
+	journal = {Sociology Compass},
+	author = {Givens, Jennifer E. and Huang, Xiaorui and Jorgenson, Andrew K},
+	year = {2019},
+	file = {givens,j-etal_ecol_unequalexch.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/givens,j-etal_ecol_unequalexch.pdf:application/pdf},
+}
+
+@article{bullard_environmental_1994,
+	title = {Environmental {Racism} and '{Invisible}' {Communities}},
+	volume = {96},
+	language = {en},
+	number = {4},
+	journal = {West Virginia Law Review},
+	author = {Bullard, Robert D.},
+	year = {1994},
+	pages = {1037--1050},
+	file = {bullard,r_invisible_communities.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/bullard,r_invisible_communities.pdf:application/pdf},
+}
+
+@article{wallace_ebolas_2016,
+	title = {Ebola's {Ecologies}},
+	language = {en},
+	number = {102},
+	journal = {New Left Review},
+	author = {Wallace, Rob and Wallace, Rodrick},
+	year = {2016},
+	pages = {1--13},
+	file = {wallace,r_ebolasecologies.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/wallace,r_ebolasecologies.pdf:application/pdf},
+}
+
+@article{wallace_covid-19_2020,
+	title = {{COVID}-19 and {Circuits} of {Capital}},
+	issn = {0027-0520, 0027-0520},
+	url = {https://monthlyreviewarchives.org/index.php/mr/article/view/MR-072-01-2020-05_1},
+	doi = {10.14452/MR-072-01-2020-05_1},
+	abstract = {The cause of COVID-19 and other such pathogens is not found just in the object of any one infectious agent or its clinical course, but also in the field of ecosystemic relations that capital and other structural causes have pinned back to their own advantage. The wide variety of pathogens, representing different taxa, source hosts, modes of transmission, clinical courses, and epidemiological outcomes, all the earmarks that send us running wild-eyed to our search engines upon each outbreak, mark different parts and pathways along the same kinds of circuits of land use and value accumulation.},
+	language = {en},
+	urldate = {2022-08-04},
+	journal = {Monthly Review},
+	author = {Wallace, Rob and Liebman, Alex and Chaves, Luis Fernando and Wallace, Rodrick},
+	month = may,
+	year = {2020},
+	pages = {1--15},
+	file = {wallace,r-etal_covid19_capital.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/wallace,r-etal_covid19_capital.pdf:application/pdf},
+}
+
+@misc{edge_ebola_2014,
+	address = {Boston},
+	title = {Ebola {Outbreak}},
+	url = {https://to.pbs.org/3Jt7pmZ},
+	language = {en},
+	journal = {Frontline},
+	publisher = {PBS},
+	author = {Edge, Dan},
+	collaborator = {Dabbous, Wael},
+	month = sep,
+	year = {2014},
+}
+
+@article{robinson_global_2014,
+	title = {Global {Capitalism}, {Immigrant} {Labor}, and the {Struggle} for {Justice}},
+	volume = {2},
+	language = {en},
+	number = {3},
+	urldate = {2022-08-05},
+	journal = {Class Race Corporate Power},
+	author = {Robinson, William I. and Santos, Xuan},
+	month = nov,
+	year = {2014},
+	file = {robinson,w&santos,x_globalcapital_immiglabor.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/robinson,w&santos,x_globalcapital_immiglabor.pdf:application/pdf},
+}
+
+@incollection{robinson_chapter_2008,
+	address = {Baltimore},
+	title = {Chapter 5: {The} {Antinomies} of {Global} {Capitalism} and the {Twilight} of {Neoliberalism}},
+	booktitle = {Latin {America} and {Global} {Capitalism}: {A} {Critical} {Globalization} {Perspective}},
+	publisher = {John Hopkins University},
+	author = {Robinson, William I.},
+	month = nov,
+	year = {2008},
+	pages = {226--286},
+	file = {robinson,w_globalcapital_latam.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/robinson,w_globalcapital_latam.pdf:application/pdf},
+}
+
+@article{robinson_latin_2012,
+	title = {Latin {America} in the {New} {Global} {Capitalism}},
+	volume = {45},
+	language = {en},
+	number = {2},
+	journal = {NACLA Report on the Americas},
+	author = {Robinson, William I.},
+	month = jan,
+	year = {2012},
+	pages = {13--18},
+	file = {robinson,w_latinam_globalcapitalism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/robinson,w_latinam_globalcapitalism.pdf:application/pdf},
+}
+
+@book{yaffe_we_2020,
+	address = {New Haven},
+	title = {We are {Cuba}! how a revolutionary people have survived in a post-{Soviet} world},
+	isbn = {978-0-300-23003-1},
+	abstract = {In the aftermath of the fall of the Soviet Union, Cuba faced the start of a crisis that decimated its economy. Helen Yaffe examines the astonishing developments that took place during and beyond this period. Drawing on archival research and interviews with Cuban leaders, thinkers, and activists, this book tells the remarkable story of how Cuba survived while the rest of the Soviet bloc crumbled. Drawing on contemporary events Yaffe shows how Cuba has been gradually introducing select market reforms. The government claims that these are necessary to sustain its socialist system, but many others believe they herald a return to capitalism. Examining key domestic initiatives including the creation of one of the world's leading biotechnological industries, its energy revolution, and medical internationalism alongside recent economic reforms, she shows why the revolution will continue post-Castro. This is a fresh, definitive account of Cuba's socialist revolution and the challenges it faces on its sixtieth anniversary},
+	language = {en},
+	publisher = {Yale University Press},
+	author = {Yaffe, Helen},
+	year = {2020},
+	note = {OCLC: on1055261047},
+	keywords = {1990-, Cuba, Foreign relations, History, U.S. foreign policy},
+	file = {yaffe,h_weare_cuba.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/yaffe,h_weare_cuba.pdf:application/pdf},
+}
+
+@incollection{stokke_social_2013,
+	address = {London},
+	title = {Social {Movements} and the ‘{Pink} {Tide}’ {Governments} in {Latin} {America}: {Transformation}, {Inclusion} and {Rejection}},
+	shorttitle = {Social {Movements} and the ‘{Pink} {Tide}’ {Governments} in {Latin} {America}},
+	language = {en},
+	urldate = {2022-08-05},
+	booktitle = {Democratization in the {Global} {South}},
+	publisher = {Palgrave Macmillan UK},
+	author = {Bull, Benedicte},
+	editor = {Stokke, Kristian and Törnquist, Olle},
+	year = {2013},
+	keywords = {latin america, pink tide, resistance to globalization, resistance to neoliberalism, social movements},
+	pages = {75--99},
+	file = {bull,b_pinktide.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/bull,b_pinktide.pdf:application/pdf},
+}
+
+@incollection{yaffe_surviving_2020,
+	address = {New Haven},
+	title = {Surviving the {Crisis}: {The} {Special} {Period}},
+	booktitle = {We are {Cuba}! how a revolutionary people have survived in a post-{Soviet} world},
+	publisher = {Yale University Press},
+	author = {Yaffe, Helen},
+	year = {2020},
+	pages = {37--68},
+}
+
+@incollection{robinson_chapter_2008-1,
+	address = {Baltimore},
+	title = {Chapter 6: {A} {New} {Cycle} of {Resistance}: {The} {Future} of {Latin} {America} and {Global} {Society}},
+	booktitle = {Latin {America} and {Global} {Capitalism}: {A} {Critical} {Globalization} {Perspective}},
+	publisher = {John Hopkins University},
+	author = {Robinson, William I.},
+	month = nov,
+	year = {2008},
+	pages = {287--359},
+	file = {robinson,w_ch6_latam_glbcapitalism.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/robinson,w_ch6_latam_glbcapitalism.pdf:application/pdf},
+}
+
+@misc{weisbrot_economic_2019,
+	title = {Economic {Sanctions} as {Collective} {Punishment}: {The} {Case} of {Venezuela}},
+	language = {en},
+	publisher = {Center for Economic and Policy Research},
+	author = {Weisbrot, Mark and Sachs, Jeffrey},
+	month = apr,
+	year = {2019},
+	file = {sachs,j_econsanctions_venezuela.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/sachs,j_econsanctions_venezuela.pdf:application/pdf},
+}
+
+@book{arrighi_adam_2007,
+	address = {London ; New York},
+	title = {Adam {Smith} in {Beijing}: lineages of the twenty-first century},
+	isbn = {978-1-84467-104-5},
+	shorttitle = {Adam {Smith} in {Beijing}},
+	language = {en},
+	publisher = {Verso},
+	author = {Arrighi, Giovanni},
+	year = {2007},
+	note = {OCLC: ocn154707506},
+	keywords = {2000-, China, Economic conditions, Economics, International economic relations, Smith, Adam, Sociological aspects},
+	file = {Arrighi - 2007 - Adam Smith in Beijing lineages of the twenty-firs.pdf:/Users/macbookpro/Zotero mjacint01/storage/IKDSFHM3/Arrighi - 2007 - Adam Smith in Beijing lineages of the twenty-firs.pdf:application/pdf},
+}
+
+@incollection{arrighi_origins_2007,
+	address = {London ; New York},
+	title = {Origins and {Dynamic} of the {Chinese} {Ascent}},
+	booktitle = {Adam {Smith} in {Beijing}: lineages of the twenty-first century},
+	publisher = {Verso},
+	author = {Arrighi, Giovanni},
+	year = {2007},
+	keywords = {china},
+	pages = {351--378},
+}
+
+@article{andreas_changing_2008,
+	title = {Changing {Colours} in {China}},
+	volume = {5},
+	language = {en},
+	journal = {New Left Review},
+	author = {Andreas, Joel},
+	year = {2008},
+	pages = {123--142},
+	file = {andreas,j_changing_colours_china.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/andreas,j_changing_colours_china.pdf:application/pdf},
+}
+
+@article{wright_two_2006,
+	title = {Two redistributive proposals—universal basic income and stakeholder grants},
+	volume = {24},
+	language = {en},
+	number = {2},
+	journal = {Focus},
+	author = {Wright, Erik Olin},
+	year = {2006},
+	pages = {5--7},
+	file = {olinwright,e_two_redistr.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/olinwright,e_two_redistr.pdf:application/pdf},
+}
+
+@article{wallerstein_new_2002,
+	title = {New {Revolts} {Against} the {System}},
+	volume = {18},
+	journal = {New Left Review},
+	author = {Wallerstein, Immanuel},
+	year = {2002},
+	pages = {29--39},
+	file = {wallerstein,i_newrevolts.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/wallerstein,i_newrevolts.pdf:application/pdf},
+}
+
+@article{zizek_resistance_2007,
+	title = {Resistance is {Surrender}},
+	journal = {London Review of Books},
+	author = {Zizek, Slavoj},
+	month = nov,
+	year = {2007},
+	file = {zizek,s_resistance_surrender.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/zizek,s_resistance_surrender.pdf:application/pdf},
+}
+
+@article{noisecat_indigenous_2016,
+	title = {The {Indigenous} {Revolution}},
+	language = {en},
+	journal = {The Jacobin},
+	author = {Noisecat, Julian Brave},
+	month = nov,
+	year = {2016},
+	file = {noisecat_indigenous_revolution.pdf:/Users/macbookpro/Library/CloudStorage/OneDrive-CaliforniaStateUniversityChico/Fall 2022 Term/SOCI 375 - Global Problems/readings/noisecat_indigenous_revolution.pdf:application/pdf},
 }
