--- a/Syllabus/soci301_syllabus.tex
+++ b/Syllabus/soci301_syllabus.tex
@@ -134,9 +134,11 @@
 \section{Indigenous Land Statement}\label{indigenous-land-statement}}
 
 \begin{quote}
+\begin{quote}
 \emph{Please be aware that the land on which our campus resides occupies
 the territory of the Mechoopda people. Without them, we would not have
 access to this campus or our education.}
+\end{quote}
 \end{quote}
 
 \hypertarget{course-description}{%
@@ -619,7 +621,7 @@ week of instruction. \textbf{Each paper must be turned in no later than
 11:59 p.m. on the day that it is due.} Moreover, please also note that
 you have options for each paper assignment; this means that for each
 paper assignment you can choose to write between two sets of theories.
-Moreover, you have the opportunity to re-write up to \textbf{two} of
+Additionally, you have the opportunity to re-write up to \textbf{two} of
 your first three lower-scored analytical response papers for a higher
 grade. If you decide to rewrite one or two lower-scored papers, these
 will be due in class on \textbf{Tuesday, December 13, 2022 (our ``final
@@ -725,10 +727,10 @@ opportunity to make up his/her academic work \textbf{within one week of
 the absence.} Therefore, it is imperative that you discuss with the
 instructor any emergencies and/or problems in order to assist you in
 completing your coursework.
-\textcolor{red}{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}
+\textcolor{red}{\bf{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}}
 
 If you have any questions, do not hesitate to discuss these issues with
-the instructor in person or via BlackBoard.
+the instructor in person or via Canvas.
 
 \hypertarget{getting-help-and-communicating-with-your-professor}{%
 \section{Getting Help And Communicating With Your
@@ -760,7 +762,7 @@ weekend, expect a reply the following Monday.
     First, look on the course website for material you missed.
   \item
     Second, if you need help understanding the material, you should
-    contact your classmate via Beach. Board (direct email or discussion
+    contact your classmate (either via direct email or Canvas discussion
     board).
   \item
     Third, if you still find it difficult, find some time to chat with
@@ -808,7 +810,7 @@ Availability:}\label{powerpoint-lecture-slides-availability}}
 Please note that course is taught in a ``synchronous manner'' which
 means that lectures will be delivered ``live''. \textbf{Each week the
 PowerPoint lecture slides used in each class meeting will be posted on
-Beachboard (in the `Content' section') on the following Friday.}
+Canvas (in the ``Modules'' section) on the following Friday.}
 
 \hypertarget{use-of-lecture-material-powerpoint-lecture-slides-and-electronic-readings}{%
 \subsection{Use of Lecture Material, PowerPoint Lecture Slides, and
@@ -879,16 +881,16 @@ Backgrounds}\label{statement-of-respect-for-diversity-in-learning-styles-perspec
 Each of us arrives in the classroom with a multitude of life
 experiences, and we all learn in different ways. In designing this
 class, my intent has been to provide many different methods to practice
-and learn to support these different learning styles. In addition, while
-learning social theory, we will use a variety of example to demonstrate
-their applicability. Some examples will be simple and often use
-`made-up' scenarios, while others deal with real life events and
-experiences about important social issues. It is my hope that all
-materials in the class are respectful to people from all backgrounds
-including diversity in sex/gender, sexuality, disability, age,
-socioeconomic status, ethnicity/race, immigration status, veteran
-status, religion, and culture. I invite your feedback on this, and your
-suggestions are always welcome.
+and learn to support these different learning styles. In addition, to
+learn about applying sociological perspectives to social issues, we will
+use a variety of example to demonstrate their applicability. Some
+examples will be simple and often use `made-up' scenarios, while others
+deal with real life events and experiences about important social
+issues. It is my hope that all materials in the class are respectful to
+people from all backgrounds including diversity in sex/gender,
+sexuality, disability, age, socioeconomic status, ethnicity/race,
+immigration status, veteran status, religion, and culture. I invite your
+feedback on this, and your suggestions are always welcome.
 
 \hypertarget{undocumented-daca-or-ab-540-immigrant-students}{%
 \subsection{Undocumented, DACA, or AB-540 Immigrant
@@ -971,9 +973,7 @@ of reasons students seek counseling:
   personal goals.
 \end{itemize}
 
-Absences for mental health reasons are excused but the professor should
-be notified immediately (within 48 - 72 hours of absence) to prevent any
-penalty on your final grade.
+\textcolor{ForestGreen}{\bf{Absences for mental health reasons are excused but the professor should be notified immediately (within 48 - 72 hours of absence) to prevent any penalty on your final grade.}}
 
 \hypertarget{other-course-policies}{%
 \section{Other Course Policies}\label{other-course-policies}}
@@ -1215,8 +1215,7 @@ reading:} What are the authors' main objectives/research questions? What
 methods, if any, did the author use to explore this question? What are
 the author's main conclusions? How do the readings build upon or
 challenge other works we have read thus far? Answering these questions
-on your own will better prepare you for quizzes, writing assignments,
-and the final project.
+on your own will better prepare you for quizzes and writing assignments.
 
 \hypertarget{course-schedule}{%
 \section{COURSE SCHEDULE}\label{course-schedule}}
@@ -1606,9 +1605,10 @@ II}\label{week-13-1115---1117-theories-of-race-ethnicity-ii}}
 \bigbreak
 \hrule
 
-\hypertarget{week-14-1122---1124-fall-break---no-classes---enjoy-your-break}{%
-\subsection{WEEK 14, 11/22 - 11/24: FALL BREAK - NO CLASSES - ENJOY YOUR
-BREAK!}\label{week-14-1122---1124-fall-break---no-classes---enjoy-your-break}}
+\hypertarget{week-14-1122---1124-fall-break---no-classes-or-assignments---enjoy-your-break}{%
+\subsection{WEEK 14, 11/22 - 11/24: FALL BREAK - NO CLASSES OR
+ASSIGNMENTS - ENJOY YOUR
+BREAK!}\label{week-14-1122---1124-fall-break---no-classes-or-assignments---enjoy-your-break}}
 
 \begin{itemize}
 \tightlist
@@ -1717,7 +1717,7 @@ AND
   in by Tuesday December 13 11:59 p.m. in Canvas.}
 \end{itemize}
 
-\textbf{\colorbox{Goldenrod}{Syllabus Last Updated on 02 August, 2022}}
+\textbf{\colorbox{LimeGreen}{Syllabus last updated on August 05, 2022}}
 
 
 
