--- a/Syllabus/soci375_syllabus.tex
+++ b/Syllabus/soci375_syllabus.tex
@@ -133,10 +133,20 @@
 \section{Indigenous Land Statement}\label{indigenous-land-statement}}
 
 \begin{quote}
+\begin{quote}
 \emph{Please be aware that the land on which our campus resides occupies
 the territory of the Mechoopda people. Without them, we would not have
 access to this campus or our education.}
 \end{quote}
+\end{quote}
+
+\hypertarget{course-status}{%
+\section{Course Status}\label{course-status}}
+
+We explore historic, economic, political, ecological and social changes
+that have created social problems worldwide. We examine a broad range of
+global problems and current global developments through a macro
+sociological lens. 3 hours lecture.
 
 \hypertarget{course-description}{%
 \section{Course Description}\label{course-description}}
@@ -212,8 +222,8 @@ prospects for the future.
   transformations.
 \item
   Explain core concepts, main arguments and relevant empirical
-  data/examples used to discuss globalization in lectures and assigned
-  readings.
+  data/examples used to discuss globalization and global problems in
+  lectures and assigned readings.
 \item
   Recognize the multiple dimensions and complex dynamics that shape
   globalization.
@@ -258,14 +268,6 @@ Objectives:}\label{sociology-program-student-learning-objectives}}
   Demonstrate proficiency in the use of technology.
 \end{itemize}
 
-\hypertarget{course-status}{%
-\subsection{Course Status}\label{course-status}}
-
-We explore historic, economic, political, ecological and social changes
-that have created social problems worldwide. We examine a broad range of
-global problems and current global developments through a macro
-sociological lens. 3 hours lecture.
-
 \hypertarget{important-dates}{%
 \subsection{Important Dates}\label{important-dates}}
 
@@ -291,8 +293,9 @@ sociological lens. 3 hours lecture.
 \item
   There is no required textbook for this course. All primary readings
   will be available electronically on the Canvas course page and on
-  Perusall. These readings will only be available to students enrolled
-  in the course, and are to be used only for educational purposes.
+  Perusall (more details about \protect\hyperlink{perusall}{Perusall}
+  below). These readings will only be available to students enrolled in
+  the course, and are to be used only for educational purposes.
 \end{itemize}
 
 \hypertarget{attendance}{%
@@ -394,8 +397,8 @@ weighed according to the following components:
 Two Exams & 30 \%\\
 Two Critical Interpretation Essays & 20 \%\\
 Five Quizzes & 15 \%\\
-Five Group Reflections & 15 \%\\
-Paired Presentation & 10 \%\\
+Paired Presentation & 15 \%\\
+Weekly Perusall Participation & 10 \%\\
 Attendance \& Participation & 10 \%\\
 \textbf{TOTAL} & \textbf{100 \%}\\
 \midrule
@@ -413,12 +416,12 @@ hours of outside time per week to this course.
 \subsection{Two Exams (30 \% of Final Grade; 15\%
 each)}\label{two-exams-30-of-final-grade-15-each}}
 
-The exam will be composed of various essay-type questions. The mid-term
-will cover the material discussed up to that point in the semester. The
-final exam will cover the rest of the semester. Detailed instructions
-for the exam will be provided via Canvas. Each exam can be comprised of
-multiple choice, true/false, definitions, short answer, and essay
-questions. You will be allowed 1 page worth of notes.
+Each exam can be comprised of multiple choice, true/false, definitions,
+short answer, and essay questions. \textbf{You will be allowed 1 page
+worth of notes.} The mid-term will cover the material covered from week
+1 to 7. The final exam will cover the rest of the semester. Detailed
+instructions for the exam will be provided via Canvas as each exam
+approaches.
 
 \hypertarget{writing_assignments}{%
 \subsection{Two (2) Critical Interpretation Essay Papers (20\% of Final
@@ -431,12 +434,12 @@ from contemporary or historical examples. You will use both theoretical
 notions and empirical evidence provided in the readings in order to
 support your argument. Detailed guidelines and prompt questions will be
 provided for the essay through Canvas. The first essay is due by
-\textbf{Sunday September 25} and the second by \textbf{Friday October
-28}. Additionally, you have the opportunity to re-write your
-lowest-scored critical interpretation essay for a higher grade. If you
-decide to rewrite one or two lower-scored papers, these will be due in
-class on \textbf{Tuesday, December 13, 2022 (our ``final exam'' due
-date) no later than 11:59 p.m.}
+\textbf{Sunday September 25, by 11:59 p.m.}, and the second by
+\textbf{Friday October 28, by 11:59 p.m.}. Additionally, you have the
+opportunity to re-write your lowest-scored critical interpretation essay
+for a higher grade. If you decide to rewrite one or two lower-scored
+papers, these will be due in class on \textbf{Tuesday, December 13, 2022
+(our ``final exam'' due date) no later than 11:59 p.m.}
 
 \textbf{Each paper must be turned in no later than 11:59 p.m. (Pacific
 Standard Time) on the day that it is due.}
@@ -476,12 +479,14 @@ syllabus quiz will be posted on Canvas by the end of the first class and
 must be completed by \textbf{11:59 p.m. on Friday September 2nd}. The
 other four quizzes will cover theories, ideas, and concepts from the
 course readings and lectures. \textbf{These four required reading
-quizzes will be posted electronically on Thursday at 4:00 p.m. and must
-be completed by 11:59 p.m. on Friday.} Each quiz will contain several
-multiple choice questions based on course readings and lecture material.
-These quizzes are designed to help you absorb the course readings and
-lectures, and to provide you with the opportunity to assess your mastery
-of the theories we are covering in the course.
+quizzes will be posted electronically on Wednesdays at 2:30 p.m. and
+must be completed by 11:59 p.m. on Thursday.} Each quiz will contain
+several multiple choice questions based on course readings and lecture
+material. These quizzes are designed to help you absorb the course
+readings and lectures, and to provide you with the opportunity to assess
+your mastery of the theories we are covering in the course. You will be
+allotted between 45-60 minutes to complete a quiz. More details will be
+posted on Canvas.
 
 \textbf{Important Note: Please keep in mind that your lowest quiz score
 will not be counted when computing final grades. Instead, your highest
@@ -496,16 +501,17 @@ Grade)}\label{paired-presentation-15-of-final-grade}}
 Students will work in pairs examining one dimension of globalization---
 inequality trends, labor processes, gender dynamics, environmental
 injustice, etc.--- and prepare a live video presentation. The evaluation
-of the presentation will be based on the following criteria: rapport
-with audience; voice, projection, and audibility; clarity in the
+of the presentation/video will be based on the following criteria:
+rapport with audience; voice, projection, and audibility; clarity in the
 expression of ideas; organization; persuasive use of evidence; and
 ability to respond to questions and to accept valid criticisms. I will
 post specific guidelines for your oral presentations on the course's
-Canvas site.
+Canvas site. \textbf{The paired presentation/video is due on Friday
+December 9, by 11:59 p.m.}
 
-\hypertarget{weekly-perusall-participation-15-of-final-grade}{%
-\subsection{Weekly Perusall Participation (15\% of Final
-Grade)}\label{weekly-perusall-participation-15-of-final-grade}}
+\hypertarget{perusall}{%
+\subsection{Weekly Perusall Participation (10\% of Final
+Grade)}\label{perusall}}
 
 For reading the primary texts (and not the textbook) we will use
 \href{https://support.perusall.com/hc/en-us}{Perusall}, a social
@@ -529,7 +535,7 @@ with at least two (2) of your groupmate's posts. Your contribution and
 annotations will be graded on a scale of 1 -- 3, with higher scores
 indicating higher quality annotations and responses. \textbf{Your
 annotations and responses to two or more groupmate's annotations and
-questions are due each Wednesday by 8:00 PM. Discussion posts and
+questions are due each Thursday by 11:59 p.m. Discussion posts and
 annotations will be given credit only if they are substantive and follow
 all instructions.}
 
@@ -576,8 +582,8 @@ throughout the semester I will assign short activities---these will take
 place either during class or to be completed immediately after a lecture
 or as a discussion post---that will count toward your overall
 participation grade. Note that \textbf{Discussion Board Posts} will be a
-33\% your participation grade---we will have a least five of them during
-the semester.
+33\% your participation grade---we will have a number of them during the
+semester.
 
 In addition to completing all of the assigned reading before each
 designated day of the week (see reading schedule below and make sure you
@@ -602,8 +608,8 @@ Students will have the opportunity to earn extra credit in this course.
 If you would like to earn up to 10 extra points maximum toward your
 final course grade, you can write two 1-page (single-spaced) analytical
 reviews and critiques of two films. The film analyses need to provide a
-critical sociological review and analysis using one or more of the
-theories or theorists covered in the course. A list of suggested films/
+\emph{critical} sociological review and analysis that connects to some
+of the main themes of the course. A list of suggested films/
 documentaries will be posted on Canvas by the end of the third week of
 classes along with the guidelines for this assignment. \textbf{These
 extra credit critiques should be concise and well-organized and argued;
@@ -633,10 +639,10 @@ opportunity to make up his/her academic work \textbf{within one week of
 the absence.} Therefore, it is imperative that you discuss with the
 instructor any emergencies and/or problems in order to assist you in
 completing your coursework.
-\textcolor{red}{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}
+\textcolor{red}{\bf{Please also note that if you foresee being absent due to a conflict with religious observance(s), you must notify the instructor of your prospective absence during the first week of classes.}}
 
 If you have any questions, do not hesitate to discuss these issues with
-the instructor in person or via BlackBoard.
+the instructor in person or via Canvas.
 
 \hypertarget{getting-help-and-communicating-with-your-professor}{%
 \section{Getting Help And Communicating With Your
@@ -668,7 +674,7 @@ weekend, expect a reply the following Monday.
     First, look on the course website for material you missed.
   \item
     Second, if you need help understanding the material, you should
-    contact your classmate via Beach. Board (direct email or discussion
+    contact your classmate (either via direct email or Canvas discussion
     board).
   \item
     Third, if you still find it difficult, find some time to chat with
@@ -716,7 +722,7 @@ Availability:}\label{powerpoint-lecture-slides-availability}}
 Please note that course is taught in a ``synchronous manner'' which
 means that lectures will be delivered ``live''. \textbf{Each week the
 PowerPoint lecture slides used in each class meeting will be posted on
-Beachboard (in the `Content' section') on the following Friday.}
+Canvas (in the ``Modules'' section) on the following Friday.}
 
 \hypertarget{use-of-lecture-material-powerpoint-lecture-slides-and-electronic-readings}{%
 \subsection{Use of Lecture Material, PowerPoint Lecture Slides, and
@@ -787,16 +793,16 @@ Backgrounds}\label{statement-of-respect-for-diversity-in-learning-styles-perspec
 Each of us arrives in the classroom with a multitude of life
 experiences, and we all learn in different ways. In designing this
 class, my intent has been to provide many different methods to practice
-and learn to support these different learning styles. In addition, while
-learning social theory, we will use a variety of example to demonstrate
-their applicability. Some examples will be simple and often use
-`made-up' scenarios, while others deal with real life events and
-experiences about important social issues. It is my hope that all
-materials in the class are respectful to people from all backgrounds
-including diversity in sex/gender, sexuality, disability, age,
-socioeconomic status, ethnicity/race, immigration status, veteran
-status, religion, and culture. I invite your feedback on this, and your
-suggestions are always welcome.
+and learn to support these different learning styles. In addition, to
+learn about applying sociological perspectives to social issues, we will
+use a variety of example to demonstrate their applicability. Some
+examples will be simple and often use `made-up' scenarios, while others
+deal with real life events and experiences about important social
+issues. It is my hope that all materials in the class are respectful to
+people from all backgrounds including diversity in sex/gender,
+sexuality, disability, age, socioeconomic status, ethnicity/race,
+immigration status, veteran status, religion, and culture. I invite your
+feedback on this, and your suggestions are always welcome.
 
 \hypertarget{undocumented-daca-or-ab-540-immigrant-students}{%
 \subsection{Undocumented, DACA, or AB-540 Immigrant
@@ -879,9 +885,7 @@ of reasons students seek counseling:
   personal goals.
 \end{itemize}
 
-Absences for mental health reasons are excused but the professor should
-be notified immediately (within 48 - 72 hours of absence) to prevent any
-penalty on your final grade.
+\textcolor{ForestGreen}{\bf{Absences for mental health reasons are excused but the professor should be notified immediately (within 48 - 72 hours of absence) to prevent any penalty on your final grade.}}
 
 \hypertarget{other-course-policies}{%
 \section{Other Course Policies}\label{other-course-policies}}
@@ -1123,16 +1127,19 @@ methods, if any, did the author use to explore this question? What are
 the author's main conclusions? How do the readings build upon or
 challenge other works we have read thus far? Answering these questions
 on your own will better prepare you for quizzes, writing assignments,
-and the final project.
+and the paired presentation.
 
 \hypertarget{course-schedule}{%
-\section{COURSE SCHEDULE}\label{course-schedule}}
+\section{\texorpdfstring{COURSE SCHEDULE
+\textbf{\colorbox{YellowGreen}{(Syllabus last updated on August 05, 2022) }}}{COURSE SCHEDULE }}\label{course-schedule}}
 
 \vspace{\baselineskip}
 
-\hypertarget{i.-introduction-theoretical-and-historical-foundations}{%
-\subsection{I. INTRODUCTION: THEORETICAL AND HISTORICAL
-FOUNDATIONS}\label{i.-introduction-theoretical-and-historical-foundations}}
+\begin{quote}
+\hypertarget{introduction-theoretical-and-historical-foundations}{%
+\subsection{INTRODUCTION: THEORETICAL AND HISTORICAL
+FOUNDATIONS}\label{introduction-theoretical-and-historical-foundations}}
+\end{quote}
 
 \bigbreak
 
@@ -1170,7 +1177,7 @@ Globalization}\label{week-01-0822---0824-a-first-look-at-contemporary-globalizat
   \url{https://bit.ly/3QgaV6m}\textgreater.
 \end{itemize}
 
-\textbf{Film:}
+\textbf{Film (required):}
 
 \begin{itemize}
 \tightlist
@@ -1179,8 +1186,20 @@ Globalization}\label{week-01-0822---0824-a-first-look-at-contemporary-globalizat
   of Trump's Trade War}} by Vice News (2019).
 \end{itemize}
 
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Post a brief introduction of yourself on the ``Welcome Board''
+\item
+  \textbf{Syllabus Quiz must be completed by Friday August 26, by 11:59
+  p.m.}
+\end{itemize}
+
 \bigbreak
 \hrule
+\newpage
 
 \hypertarget{week-02-0829---0831-a-deeper-look.-globalization-and-the-capitalist-world-economy}{%
 \subsection{WEEK 02, 08/29 - 08/31: A Deeper Look. Globalization and the
@@ -1201,14 +1220,683 @@ World-Economy}\label{week-02-0829---0831-a-deeper-look.-globalization-and-the-ca
 \textbf{Required Readings:}
 
 \begin{itemize}
-\tightlist
+\item
+  Wallerstein I (2004). ``The Modern World-System as a Capitalist World-
+  Economy: Production, Surplus-Value, and Polarization.'' In
+  \emph{World-Systems Analysis: An Introduction}. Duke University Press,
+  Durham, NC.
 \item
   Robinson W (2007). ``Beyond the Theory of Imperialism: Global
   Capitalism and the Transnational State.'' \emph{Societies Without
   Borders}, \emph{2}(1), 5-26. \textless URL: 2022-08-03\textgreater.
 \end{itemize}
 
-\textbf{\colorbox{LimeGreen}{Syllabus last updated on August 03, 2022 }}
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Quiz \#2 must be completed by Thursday September 1, by 11:59
+  p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\begin{quote}
+\begin{quote}
+\hypertarget{part-i.-global-processes-accumulation-and-trade}{%
+\subsection{PART I. GLOBAL PROCESSES: ACCUMULATION AND
+TRADE}\label{part-i.-global-processes-accumulation-and-trade}}
+\end{quote}
+\end{quote}
+
+\hypertarget{week-03-0907-accumulation-regimes-and-socio-economic-transformations-from-fordism-to-neoliberal-globalization-i}{%
+\subsection{WEEK 03, 09/07: Accumulation Regimes and Socio-Economic
+Transformations: From Fordism to Neoliberal Globalization,
+I}\label{week-03-0907-accumulation-regimes-and-socio-economic-transformations-from-fordism-to-neoliberal-globalization-i}}
+
+\colorbox{Melon}{\bf{No Class on Monday 09/05 (Labor Day)}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Fordism, or, the So-Called Golden Age of Capitalism
+\item
+  Global Fordism, or, ``When Work Disappeared''
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Jessop B (1992). ``Fordism and Post-Fordism: A Critical
+  Reformulation.'' In \emph{Pathways to Industrialization and Regional
+  Development}, 1 edition, 42-62. Routledge, London, UK. ISBN
+  978-0-203-99554-9.
+\item
+  Lipietz A (1984). ``Towards Global Fordism?'' \emph{New Left Review},
+  33-47.
+\end{itemize}
+
+\textbf{Film (required):}
+
+\begin{itemize}
+\tightlist
+\item
+  Watch this short film on
+  \href{https://www.youtube.com/watch?v=8PdmNbqtDdI}{``Fordism'' and
+  ``Taylorism''}
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-04-0912---0914-accumulation-regimes-and-socio-economic-transformation-from-fordism-to-neoliberal-globalization-ii}{%
+\subsection{WEEK 04, 09/12 - 09/14: Accumulation Regimes and
+Socio-Economic Transformation: From Fordism to Neoliberal Globalization,
+II}\label{week-04-0912---0914-accumulation-regimes-and-socio-economic-transformation-from-fordism-to-neoliberal-globalization-ii}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  On the Ruins of Fordism: The Rise of Neoliberalism
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Friedman M (1962). ``The Relation Between Economic Freedom and
+  Political Freedom.'' In \emph{Capitalism and Freedom}, 7-21.
+  University of Chicago Press, Chicago, IL.
+\item
+  Harvey D (2007). ``Freedom's Just Another Word.'' In \emph{Brief
+  History of Neoliberalism}. Oxford University Press, New York.
+\item
+  Bonnefoy P (2017). ``Documenting U.S. Role in Democracy's Fall and
+  Dictator's Rise in Chile.'' \emph{New York Times}, 3. \textless URL:
+  \url{https://nyti.ms/3QfZ5Jl}\textgreater.
+\end{itemize}
+
+\textbf{Film (recommended):}
+
+\begin{itemize}
+\item
+  \href{https://www.youtube.com/watch?v=B3B5qt6gsxY}{The Shock
+  Doctrine}, directed by Mat Whitecross and Michael Winterbottom
+  (Sundance Selects, 2009).
+\item
+  \href{https://www.freetochoosenetwork.org/programs/free_to_choose/index_90.php?id=the_power_of_the_market}{Free
+  to Choose (PBS documentary by Milton Friedman)}. Watch 1990 version of
+  the first episode available by going to Free to Choose Network. (You
+  can skip the intro by Arnold Schwarzenegger by going to minute 6:46.)
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Quiz \#2 must be completed by Thursday October 15, by 11:59
+  p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-05-0919---0921-debating-free-trade-i-comparative-advantage-or-unequal-development}{%
+\subsection{WEEK 05, 09/19 - 09/21: Debating Free Trade, I: Comparative
+Advantage or Unequal
+Development?}\label{week-05-0919---0921-debating-free-trade-i-comparative-advantage-or-unequal-development}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Debating Free Trade in General
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Krugman P (2011). ``Increasing Returns in a Comparative Advantage
+  World.'' In \emph{World Scientific Studies in International
+  Economics}, volume 16, 43-51. WORLD SCIENTIFIC. ISBN 978-981-4340-36-6
+  978-981-4340-37-3, doi: 10.1142/9789814340373\_0007 (URL:
+  \url{https://doi.org/10.1142/9789814340373_0007}), \textless URL:
+  \url{https://bit.ly/3Qk0m1U}\textgreater.
+\item
+  Amin S (1976). ``From Specialization to Dependence.'' In \emph{Unequal
+  Development: An Essay on the Social Formations of Peripheral
+  Capitalism}, 133-145. Harvester Press Limted, Sussex, England.
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Critical Interpretation Essay \#1 due by Sunday 11:59 p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-06-0926---0928-debating-free-trade-ii-what-should-be-done-with-pollution--intensive-industries}{%
+\subsection{WEEK 06, 09/26 - 09/28: Debating Free Trade, II: What Should
+be Done with Pollution- Intensive
+Industries?}\label{week-06-0926---0928-debating-free-trade-ii-what-should-be-done-with-pollution--intensive-industries}}
+
+\textbf{Topics:}
+
+\begin{itemize}
+\tightlist
+\item
+  Debating Trade in Dirty Industries
+\end{itemize}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Summers L (1991). ``Our Words: The Lawrence Summers Memo.''
+  \textless URL: \url{https://bit.ly/3d8BUm9}\textgreater.
+\item
+  Johnson J, Pecquet G, Taylor L (2007). ``Potential Gains From Trade in
+  Dirty Industries: Revisiting Lawrence Summers' Memo.'' \emph{Cato
+  Journal}, \emph{27}(3), 397-410.
+\item
+  Baer HA (2012). ``Global Capitalism and Climate Change.'' In
+  \emph{Handbook on International Political Economy}, 395-414. World
+  Scientific, Singapore.
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-07-1003---1005-debating-free-trade-iii-unearthing-the-sources-of-global-unequal-exchange}{%
+\subsection{WEEK 07, 10/03 - 10/05: Debating Free Trade, III: Unearthing
+the Sources of Global Unequal
+Exchange}\label{week-07-1003---1005-debating-free-trade-iii-unearthing-the-sources-of-global-unequal-exchange}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  A Historical Perspective on Global Trade: Imperialism and Unequal
+  Exchange
+\item
+  Midterm Review on \emph{Wednesday October 5}
+\end{enumerate}
+
+\textbf{Reading Readings:}
+
+\begin{itemize}
+\tightlist
+\item
+  Clark B, Foster JB (2009). ``Ecological Imperialism and the Global
+  Metabolic Rift: Unequal Exchange and the Guano/Nitrates Trade.''
+  \emph{International Journal of Comparative Sociology}, \emph{50}(3-4),
+  311-334. ISSN 0020-7152, 1745-2554, doi: 10.1177/0020715209105144
+  (URL: \url{https://doi.org/10.1177/0020715209105144}), \textless URL:
+  \url{https://bit.ly/3zzNLkJ}\textgreater.
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Midterm Exam must be completed by Thursday October 6, by 11:59
+  p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\begin{quote}
+\begin{quote}
+\hypertarget{part-ii.-dimensions-of-globalization}{%
+\subsection{PART II. DIMENSIONS OF
+GLOBALIZATION}\label{part-ii.-dimensions-of-globalization}}
+\end{quote}
+\end{quote}
+
+\hypertarget{week-08-1010---1012-global-labor-forces}{%
+\subsection{WEEK 08, 10/10 - 10/12: Global Labor
+Forces}\label{week-08-1010---1012-global-labor-forces}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Racialization of Global Labor Force
+\item
+  Global Labor Struggles
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Bonacich E, Alimahomed S, Wilson JB (2008). ``The Racialization of
+  Global Labor.'' \emph{American Behavioral Scientist}, \emph{52}(3),
+  342-355. \textless URL: 2022-08-04\textgreater.
+\item
+  Silver BJ, Karatasli SS (2015). ``Historical Dynamics of Capitalism
+  and Labor Movements.'' In \emph{The Oxford Handbook of Social
+  Movements}, 133-145. Oxford University Press, United Kingdom.
+\end{itemize}
+
+\textbf{Recommended Readings:} + Wallerstein I (1988). ``The Ideological
+Tensions of Capitalism: Universalism Versus Racism and Sexism.'' In
+\emph{Race, Nation, Class: Ambiguous Identities}, 29-36. Verso.
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  Choose partner and topic for \emph{paired presentation} assignment by
+  \textbf{the end of Wednesday's class}
+\end{itemize}
+
+\hypertarget{week-09-1017---1019-gendered-global-accumulation}{%
+\subsection{WEEK 09, 10/17 - 10/19: Gendered Global
+Accumulation}\label{week-09-1017---1019-gendered-global-accumulation}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Patriarchy and Global Accumulation
+\item
+  Complex Gender Configurations in Globalization
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Mies M (2007). ``Patriarchy and accumulation on a world scale
+  revisited. (Keynote lecture at the Green Economics Institute, Reading,
+  29 October 2005).'' \emph{International Journal of Green Economics},
+  \emph{1}(3/4), 268. ISSN 1744-9928, 1744-9936, \textless URL:
+  \url{http://www.inderscience.com/link.php?id=13059}\textgreater.
+\item
+  Chen MA, Vanek J, Lund F, Heintz J (2005). ``Chapter 2: The Totality
+  of Women's Work.'' In \emph{Progress of the world's women 2005: women,
+  work, \& poverty}, 22-35. United Nations Development Fund for Women,
+  New York, N.Y.
+\item
+  George S (2000). ````Dirty Nurses'' and ``Men Who Play''.'' In Buroway
+  M, Blum JA, George S, Gille Z, Gowan T, Haney L, Klawiter M, Lopez SH,
+  O'Riain S, Thayer M (eds.), \emph{Global Ethnography: Forces,
+  Connections, and Imaginations in a Postmodern World}, 1 edition,
+  144-174. University of California Press, Berkeley, CA. ISBN
+  0-520-22216-4.
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Quiz \#3 must be completed by Thursday October 20, by 11:59
+  p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-10-1024---1026-global-environmental-injustice}{%
+\subsection{WEEK 10, 10/24 - 10/26: Global Environmental
+(In)justice}\label{week-10-1024---1026-global-environmental-injustice}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Environmental Racism
+\item
+  Climate Change and Environmental Injustice
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Bullard RD (1994). ``Environmental Racism and `Invisible'
+  Communities.'' \emph{West Virginia Law Review}, \emph{96}(4),
+  1037-1050.
+\item
+  Timmons Roberts J, Parks BC (2007). ``Fueling Injustice:
+  Globalization, Ecologically Unequal Exchange and Climate Change.''
+  \emph{Globalizations}, \emph{4}(2), 193-210. ISSN 1474-7731,
+  1474-774X, doi: 10.1080/14747730701345218 (URL:
+  \url{https://doi.org/10.1080/14747730701345218}), \textless URL:
+  \url{http://www.tandfonline.com/doi/abs/10.1080/14747730701345218}\textgreater.
+\end{itemize}
+
+\textbf{Films (required):}
+
+\begin{itemize}
+\item
+  \emph{TeleSUR's}
+  \href{https://www.youtube.com/watch?v=cb4PH7ak_iU}{``Empire Files: The
+  Sacrifice Zones of Hurricane Harvey''}
+\item
+  \emph{The Intercept's}
+  \href{https://www.youtube.com/watch?v=pTiZtYaB3Zo}{``The Battle for
+  Paradise: Naomi Klein Reports from Puerto Rico''}
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Critical Interpretation Essay \#2 must be turned in by Friday
+  October 28, by 11:59 p.m.}
+\end{itemize}
+
+\bigbreak
+
+\hypertarget{week-11-1031---1102-global-health-injustice}{%
+\subsection{WEEK 11, 10/31 - 11/02: Global Health
+(In)justice}\label{week-11-1031---1102-global-health-injustice}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Globalization and Pandemics I: Ebola
+\item
+  Globalization and Pandemics II: Coronavirus (Covid-19)
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Wallace R, Wallace R (2016). ``Ebola's Ecologies.'' \emph{New Left
+  Review}, 1-13.
+\item
+  Wallace R, Liebman A, Chaves LF, Wallace R (2020). ``COVID-19 and
+  Circuits of Capital.'' \emph{Monthly Review}, 1-15. ISSN 0027-0520,
+  0027-0520, doi: 10.14452/MR-072-01-2020-05\_1 (URL:
+  \url{https://doi.org/10.14452/MR-072-01-2020-05_1}), \textless URL:
+  \url{https://monthlyreviewarchives.org/index.php/mr/article/view/MR-072-01-2020-05_1}\textgreater.
+\end{itemize}
+
+\textbf{Films (required):}
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://www.pbs.org/wgbh/frontline/documentary/ebola-outbreak/}{\emph{Ebola
+  Outbreak}} (Boston: WGBH/Frontline, 2014)
+\item
+  \href{https://www.youtube.com/watch?v=TPpoJGYlW54}{\emph{How Wildlife
+  Trade is Linked to Coronavirus}} by Vox (2020)
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\begin{quote}
+\begin{quote}
+\hypertarget{part-iii.-concrete-analysis-of-concrete-situations}{%
+\subsection{PART III. CONCRETE ANALYSIS OF CONCRETE
+SITUATIONS}\label{part-iii.-concrete-analysis-of-concrete-situations}}
+\end{quote}
+\end{quote}
+
+\hypertarget{week-12-1107---1109-latin-america-in-capitalist-globalization-processes-of-incorporation}{%
+\subsection{WEEK 12, 11/07 - 11/09: Latin America in Capitalist
+Globalization: Processes of
+Incorporation}\label{week-12-1107---1109-latin-america-in-capitalist-globalization-processes-of-incorporation}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Latin America in Globalization: Socio-Economic Transformation and
+  Migration
+\item
+  Latin America in Globalization: Informalization, Feminization and
+  Immiseration
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Robinson WI (2012). ``Latin America in the New Global Capitalism.''
+  \emph{NACLA Report on the Americas}, \emph{45}(2), 13-18.
+\item
+  Robinson WI, Santos X (2014). ``Global Capitalism, Immigrant Labor,
+  and the Struggle for Justice.'' \emph{Class Race Corporate Power},
+  \emph{2}(3). \textless URL: 2022-08-05\textgreater.
+\item
+  Robinson WI (2008). ``Chapter 5: The Antinomies of Global Capitalism
+  and the Twilight of Neoliberalism.'' In \emph{Latin America and Global
+  Capitalism: A Critical Globalization Perspective}, 226-286. John
+  Hopkins University, Baltimore.
+  \colorbox{Goldenrod}{\bf{Read pp. 241-244 and 247-254 only}}
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Quiz \#3 must be completed by Thursday October 20, by 11:59
+  p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-13-1114---1116-latin-america-in-capitalist-globalization-processes-of-state-led-resistance}{%
+\subsection{WEEK 13, 11/14 - 11/16: Latin America in Capitalist
+Globalization: Processes of State-led
+Resistance}\label{week-13-1114---1116-latin-america-in-capitalist-globalization-processes-of-state-led-resistance}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  Cuba's Arduous Resistance to Capitalist Globalization
+\item
+  \emph{The Pink Tide}: A Latin American Turn to the Left
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Yaffe H (2020). ``Surviving the Crisis: The Special Period.'' In
+  \emph{We are Cuba! how a revolutionary people have survived in a
+  post-Soviet world}, 37-68. Yale University Press, New Haven.
+\item
+  Bull B (2013). ``Social Movements and the `Pink Tide' Governments in
+  Latin America: Transformation, Inclusion and Rejection.'' In Stokke K,
+  Törnquist O (eds.), \emph{Democratization in the Global South}, 75-99.
+  Palgrave Macmillan UK, London. \textless URL: 2022-08-05\textgreater.
+\item
+  Robinson WI (2008). ``Chapter 6: A New Cycle of Resistance: The Future
+  of Latin America and Global Society.'' In \emph{Latin America and
+  Global Capitalism: A Critical Globalization Perspective}, 287-359.
+  John Hopkins University, Baltimore.
+
+  \colorbox{Goldenrod}{\bf{Read the section "Venezuela and the Bolivarian Revolution" (pp. 322-326) only}}
+\item
+  Weisbrot M, Sachs J (2019). ``Economic Sanctions as Collective
+  Punishment: The Case of Venezuela.''
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-14-1121---1123-fall-break---no-classes-will-be-held}{%
+\subsection{WEEK 14, 11/21 - 11/23: Fall Break - No classes will be
+held}\label{week-14-1121---1123-fall-break---no-classes-will-be-held}}
+
+\begin{itemize}
+\tightlist
+\item
+  \textcolor{Magenta}{\bf{No required readings or assignments due this week.}}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-15-1128---1130-debating-chinas-place-in-globalization}{%
+\subsection{WEEK 15, 11/28 - 11/30: Debating China's Place in
+Globalization}\label{week-15-1128---1130-debating-chinas-place-in-globalization}}
+
+\textbf{Topics:}
+
+\begin{enumerate}
+\def\labelenumi{(\arabic{enumi})}
+\tightlist
+\item
+  China's Rise as Historic East Asian Renaissance
+\item
+  China's Rise as the PRC's Road to Capitalism
+\end{enumerate}
+
+\textbf{Required Readings:}
+
+\begin{itemize}
+\item
+  Arrighi G (2007). ``Origins and Dynamic of the Chinese Ascent.'' In
+  \emph{Adam Smith in Beijing: lineages of the twenty-first century},
+  351-378. Verso, London ; New York.
+\item
+  Andreas J (2008). ``Changing Colours in China.'' \emph{New Left
+  Review}, \emph{5}, 123-142.
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Quiz \#4 must be completed by Thursday December 1, by 11:59
+  p.m.}
+\end{itemize}
+
+\bigbreak
+\hrule
+
+\hypertarget{week-16-1205---1207-dynamics-of-global-resistance}{%
+\subsection{WEEK 16, 12/05 - 12/07: Dynamics of Global
+Resistance}\label{week-16-1205---1207-dynamics-of-global-resistance}}
+
+\begin{itemize}
+\item
+  Wallerstein I (2002). ``New Revolts Against the System.'' \emph{New
+  Left Review}, \emph{18}, 29-39.
+\item
+  Zizek S (2007). ``Resistance is Surrender.'' \emph{London Review of
+  Books}.
+\item
+  Wright EO (2006). ``Two redistributive proposals---universal basic
+  income and stakeholder grants.'' \emph{Focus}, \emph{24}(2), 5-7.
+\item
+  Noisecat JB (2016). ``The Indigenous Revolution.'' \emph{The Jacobin}.
+\end{itemize}
+
+\textbf{Assignments Due:}
+
+\begin{itemize}
+\tightlist
+\item
+  Weekly Perusall Participation
+\item
+  \textbf{Group presentation/video due Friday December 9, by 11:59 p.m.}
+\item
+  \textbf{Extra credit assignments due Friday December 9, by 11:59 p.m.}
+\item
+  \textbf{Re-write of lowest scored paper must be turned in by Friday
+  December 9, by 11:59 p.m.}
+\end{itemize}
+
+\hypertarget{final-exam-will-be-held-on-tuesday-december-13.-more-details-will-be-posted-on-canvas.}{%
+\subsection{Final Exam will be held on Tuesday December 13. More details
+will be posted on
+Canvas.}\label{final-exam-will-be-held-on-tuesday-december-13.-more-details-will-be-posted-on-canvas.}}
+
+\bigbreak
+\hrule
 
 
 
